--- a/browser/embed.html
+++ b/browser/embed.html
@@ -1,5 +1,8 @@
 <html>
 	<h1>embed</h1>
-	<iframe src="/embed/matt/default-complete?autoplay=true&noheader=true" width="800" height="450" frameborder="0" allowfullscreen></iframe>
+	<div style="width:750px; border:1px solid red">
+	<script src="./embed.js"></script>
 	<h3>end</h3>
+		<p>Lorem</p>
+	</div>
 </html>
