--- a/browser/embed.html
+++ b/browser/embed.html
@@ -1,5 +1,5 @@
 <html>
 	<h1>embed</h1>
-	<script src="/scripts/embed.js" data-vizorurl="/eesn/flamingofront?123"></script>
-	<script src="/scripts/embed.js" data-vizorurl="/eesn/one-two-three?123"></script>
+	<script src="/scripts/embed.js" data-vizorurl="/embed/eesn/flamingofront"></script>
+	<script src="/scripts/embed.js" data-vizorurl="/embed/eesn/one-two-three"></script>
 </html>
